# bridging-the-domain-gap-by-diffusion

./: .gitignore  .pre-commit-config.yaml  .thirdparty.md  LICENSE  Makefile  README.md  datasets.md  environment.yml  pyproject.toml
_fix/: fix.sh
data/carla_scripts/: script_1.py
main/: pyproject.toml
main/src/: main.py
modules/aldm/: README.md  pyproject.toml
modules/aldm/aldm/: __init__.py  aldm.py  config.py
modules/aldm/aldm/_wrapper/cldm/: ddim_hacked.py
modules/aldm/aldm/_wrapper/cldm_seg/: cldm_resume.py  cldm_resume_seg_enc.py  ddim4train.py  util.py
modules/aldm/aldm/_wrapper/dataloader/: carla_seg_helper.py  cityscapes.py  image_folder.py
modules/aldm/aldm/_wrapper/ldm/: util.py
modules/aldm/aldm/_wrapper/ldm/models/diffusion/: ddim.py  ddpm.py  plms.py
modules/aldm/aldm/_wrapper/ldm/modules/diffusionmodules/: util.py
modules/aldm/aldm/_wrapper/utils/: generate_ade20k.py  generate_ade20k_domain.py  generate_cityscapes.py  generate_cityscapes_domain.py  generate_cityscapes_domain_train_set_DA.py
modules/carla-module/: README.md  pyproject.toml
modules/carla-module/carla_module/: __init__.py  carla.py  config.py
modules/carla-module/carla_module/types/: __init__.py  carla_script_interface.py
modules/convert-depth-format/: README.md  pyproject.toml
modules/convert-depth-format/convert_depth_format/denormalizer/: __init__.py  config.py  denormalizer.py
modules/convert-depth-format/convert_depth_format/inverter/: __init__.py  config.py  inverter.py
modules/convert-seg-format/: README.md  pyproject.toml
modules/convert-seg-format/convert_seg_format/_helper/: __init__.py  color_encoding.py  replacer.py
modules/convert-seg-format/convert_seg_format/to_ade/: __init__.py  config.py  to_ade.py
modules/convert-seg-format/convert_seg_format/to_cityscapes/: __init__.py  config.py  to_cityscapes.py
modules/convert2coco/: README.md  pyproject.toml
modules/convert2coco/convert2coco/: __init__.py  classes.py  config.py  convert2coco.py
modules/image2image/: README.md  pyproject.toml
modules/image2image/image2image/: __init__.py  config.py  image2image.py
modules/image2image/image2image/base/: config.py  image2image.py
modules/image2image/image2image/combine/: __init__.py  config.py  i2i_combined.py
modules/image2image/image2image/depth/: __init__.py  config.py  i2i_depth.py
modules/sd-pipeline/: README.md  pyproject.toml
modules/sd-pipeline-typing/: README.md  pyproject.toml
modules/sd-pipeline-typing/sd_pipeline_typing/types/: __init__.py  config.py  modules.py  pipeline_config.py
modules/sd-pipeline/sd_pipeline/components/: pipeline.py
modules/sd-pipeline/sd_pipeline/modules/filter/: __init__.py  config.py  filter.py
modules/sd-pipeline/sd_pipeline/modules/group/: __init__.py  config.py  group.py
modules/sd-pipeline/sd_pipeline/modules/load_bboxes_from_fs/: __init__.py  config.py  load_bboxes_from_fs.py
modules/sd-pipeline/sd_pipeline/modules/load_from_fs/: __init__.py  config.py  load_from_fs.py
modules/sd-pipeline/sd_pipeline/modules/multiply/: __init__.py  config.py  multiply.py
modules/sd-pipeline/sd_pipeline/modules/rename/: __init__.py  config.py  rename.py
modules/sd-pipeline/sd_pipeline/modules/resize/: __init__.py  config.py  resize.py
modules/sd-pipeline/sd_pipeline/modules/sort/: __init__.py  config.py  sort.py
modules/sd-pipeline/sd_pipeline/modules/store_in_fs/: __init__.py  config.py  store_in_fs.py
modules/upscale-downscale-details-enhancer/: README.md  pyproject.toml
modules/upscale-downscale-details-enhancer/upscale_downscale_details_enhancer/: __init__.py  config.py  udde.py
modules/yolox-module/: README.md  pyproject.toml
modules/yolox-module/yolox_module/: __init__.py  config.py  yolox.py
modules/yolox-module/yolox_package/: README.md  requirements.txt
modules/yolox-x/: pyproject.toml
scripts/: README.md
scripts/utils/MUAD/: convert_depth.py  convert_to_coco_annotation.py
scripts/video_analysis/: plot.py  similarity.py  tracking.py
scripts/video_generation/: extract_frames.py  resize.py  video.py
sd-pipeline/: pyproject.toml
sd-pipeline/sd_pipeline/_wrapper/aldm/cldm/: ddim_hacked.py  model.py
sd-pipeline/sd_pipeline/_wrapper/aldm/cldm_seg/: cldm_seg_pixel_seg_enc_multiStep.py
sd-pipeline/sd_pipeline/_wrapper/aldm/dataloader/: ade20k.py  coco_stuff.py
sd-pipeline/sd_pipeline/_wrapper/aldm/ldm/modules/diffusionmodules/: openaimodel.py
sd-pipeline/sd_pipeline/_wrapper/aldm/utils/: generate_ade20k.py  generate_cityscapes.py  generate_cityscapes_domain_train_set_DA.py
sd-pipeline/sd_pipeline/components/: __init__.py  config.py  modules.py  pipeline.py  pipeline_config.py
sd-pipeline/sd_pipeline/modules/ALDM/: __init__.py  aldm.py  config.py
sd-pipeline/sd_pipeline/wrapper/aldm/cldm/: cldm.py
sd-pipeline/sd_pipeline/wrapper/aldm/ldm/modules/encoders/: modules.py
sd-pipeline/sd_pipeline/wrapper/aldm/utils/: generate_ade20k_domain.py  generate_cityscapes_domain.py
src/: 10_aldm+I2I_seg_large.py  11_aldm+I2I_seg_dep_large.py  12_aldm+I2I_seg_dep_large_first_person.py  13_consistency.py  14_consistency + I2I_comp.py  1_aldm.py  2_aldm+I2I.py  2_aldm+I2I_large_dataset.py  2_aldm+I2I_seg.py  3_coco.py  4_yolox-x.py  5_aldm+I2I+UDDE.py  7_aldm+I2I_depth.py  8_aldm+I2I_depth+I2I_seg.py  8_consistency.py  9_aldm_large.py  main.py
thesis/: Makefile  main.tex  mmkthesis.cls  mmkthesis_deutsch.cls
thesis/bibliography/: thesis.bib
thesis/figures/: StyleGAN.eps  network.eps  varyM.eps
thesis/frontmatter/: abstract.tex  newcommands.tex
thesis/mainmatter/: 01_introduction.tex  02_background.tex  03_related_work.tex  04_own_work.tex  05_evaluation.tex  06_conclusion.tex
thesis/template_information/: chapter.tex  multilayer_feedforward.tex  plot.tex
