[project]
name = "bridging-the-domain-gap-by-diffusion"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Simon Okutan", email = "simon.okutan@tum.de"},
]
dependencies = [
    "pillow==10.3.0",
    "sd-pipeline-typing @ file:///${PROJECT_ROOT}/modules/sd-pipeline-typing",
    "sd-pipeline @ file:///${PROJECT_ROOT}/modules/sd-pipeline",
    "image2image @ file:///${PROJECT_ROOT}/modules/image2image",
    "aldm @ file:///${PROJECT_ROOT}/modules/aldm",
    "torch>=2.2.2",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
    "-e file:///${PROJECT_ROOT}/modules/aldm#egg=aldm",
    "-e file:///${PROJECT_ROOT}/modules/image2image#egg=image2image",
    "-e file:///${PROJECT_ROOT}/modules/sd-pipeline#egg=sd-pipeline",
    "-e file:///${PROJECT_ROOT}/modules/yolox-x#egg=yolox-x",
]
