[project]
name = "bridging-the-domain-gap-by-diffusion"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Simon Okutan", email = "simon.okutan@tum.de"},
]
dependencies = [
    "pillow==10.3.0",
    "torch>=2.2.2",
    "setuptools==65.7.0",
    "sd-pipeline-typing @ file:///${PROJECT_ROOT}/modules/sd-pipeline-typing",
    "sd-pipeline @ file:///${PROJECT_ROOT}/modules/sd-pipeline",
    "image2image @ file:///${PROJECT_ROOT}/modules/image2image",
    "aldm @ file:///${PROJECT_ROOT}/modules/aldm",
    "convert2coco @ file:///${PROJECT_ROOT}/modules/convert2coco",
    "upscale-downscale-details-enhancer @ file:///${PROJECT_ROOT}/modules/upscale-downscale-details-enhancer",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
plugins = [
    "sync-pre-commit-lock"
]

[tool.pdm.dev-dependencies]
dev = [
    "-e file:///${PROJECT_ROOT}/modules/aldm#egg=aldm",
    "-e file:///${PROJECT_ROOT}/modules/image2image#egg=image2image",
    "-e file:///${PROJECT_ROOT}/modules/sd-pipeline#egg=sd-pipeline",
    "-e file:///${PROJECT_ROOT}/modules/upscale-downscale-details-enhancer#egg=upscale-downscale-details-enhancer",
    "-e file:///${PROJECT_ROOT}/modules/convert2coco#egg=convert2coco",
    "-e file:///${PROJECT_ROOT}/modules/yolox-module#egg=yolox-module",
]
lint = [
    "pre-commit>=3.7.1",
    "ruff>=0.4.4",
]

[tool.pdm.scripts]
post_install = "pdm install --plugins"

[tool.sync-pre-commit-lock]
automaticall-install-hooks = true
disable-sync-from-lock = false
ignore = []
pre-commit-config-file = ".pre-commit-config.yaml"
dependency-mapping = {}

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".pdm-plugins",
    "_fix",
    "data",
]

# Same as Black.
line-length = 100
indent-width = 4

# Assume Python 3.8
target-version = "py311"

[tool.ruff.lint]
# Ignore unable to detect undefined
ignore = ["F401"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F403"]

[tool.pyright]
venv = ".venv"
reportMissingImports = false
reportMissingModuleSource = false
reportAttributeAccessIssue = false
ignore = ["**/_wrapper/**", "**/_fix/**"]
