[project]
name = "main"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Simon Okutan", email = "simon.okutan@tum.de"},
]
dependencies = [
    "mypy>=1.9.0",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
    "-e file:///${PROJECT_ROOT}/../sd-pipeline#egg=sd-pipeline",
]
