[project]
name = "carla-module"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Simon Okutan", email = "simon.okutan@tum.de"},
]

dependencies = [
    "carla >= 0.9.15 ",
    "sd-pipeline-typing @ file:///${PROJECT_ROOT}/../sd-pipeline-typing#egg=sd-pipeline-typing",
]

requires-python = "==3.8.*"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    "aldm/_wrapper",
]

# Same as Black.
line-length = 100
indent-width = 4

# Assume Python 3.8
target-version = "py311"

[tool.ruff.lint]
# Ignore unable to detect undefined
ignore = ["F401"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F403"]
