[project]
name = "yolox-module"
version = "0.1.0"
description = "Object detection with YOLOX."
authors = [
    {name = "Simon Okutan", email = "simon.okutan@tum.de"},
]

dependencies = [
    "torch>=1.7",
    "onnxruntime==1.8.0"
]

requires-python = "==3.8.*"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

